@@ -2,7 +2,8 @@ bulk-extractor (1.5.1-0kali1) UNRELEASED; urgency=medium
 
   * debian/watch updated because it didn't work.
   * New Uptream release 
-  * drop 2 files in debian/.docs because they don't exist anymore
+  * drop 2 files in debian/docs because they don't exist anymore
+  * add dh_autoreconf in rules to create ./configure
 
  -- Sophie Brun <sophie@freexian.com>  Tue, 05 Aug 2014 09:48:08 +0200
 
